# diamond-rs

./: Cargo.toml  README.md  build.rs
src/: config.rs  ffi.rs  lib.rs  main.rs
src/align/: hsp.rs  mod.rs  target.rs
src/basic/: cigar.rs  mod.rs  packed_sequence.rs  packed_transcript.rs  reduction.rs  seed.rs  sequence.rs  sequence_utils.rs  shape.rs  translate.rs  value.rs
src/cluster/: mod.rs
src/commands/: blastp.rs  blastx.rs  cluster_cmd.rs  dbinfo.rs  getseq.rs  makedb.rs  mod.rs  test_cmd.rs  view.rs
src/data/: daa.rs  db_builder.rs  dmnd.rs  dmnd_reader.rs  fasta.rs  mod.rs  sequence_set.rs  taxonomy.rs
src/dp/: banded.rs  banded_cbs.rs  mod.rs  simd_banded.rs  simd_ungapped.rs  smith_waterman.rs  ungapped.rs
src/masking/: mod.rs  tantan.rs  tantan_simd.rs
src/masking/motifs/: mod.rs  motif_data.rs
src/output/: format.rs  mod.rs  paf.rs  pairwise.rs  sam.rs  xml.rs
src/search/: hit.rs  mod.rs  parallel.rs  seed_array.rs  seed_match.rs  sensitivity.rs
src/stats/: alp.rs  cbs.rs  matrices.rs  mod.rs  pvalues.rs  score_matrix.rs  standard_matrix.rs
src/util/: hash.rs  interval.rs  mod.rs
tests/: equivalence.rs  pipeline.rs  regression.rs
